# b_iToJCwWEMZo-1774459432585

./: package-lock.json  package.json  pyproject.toml  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/generate-dp/: route.ts
components/: dp-uploader.tsx
scripts/: install-deps.py  install-global-deps.py  process-dp.py  setup-python.sh  setup-uv.py  verify-and-install.py
